updatep plantit.yaml input/output sections

--- a/plantit.yaml
+++ b/plantit.yaml
@@ -4,8 +4,14 @@ public: True
 clone: False
 image: docker://alpine
 commands: cat "$INPUT" && cat "$INPUT" >> cowsaid.txt
-from: /iplant/home/shared/iplantcollaborative/testing_tools/cowsay/cowsay.txt
-to: cowsaid.txt
+input:
+  path: /iplant/home/shared/iplantcollaborative/testing_tools/cowsay/cowsay.txt
+  kind: file
+output:
+  path:
+  include:
+    names:
+      - cowsaid.txt
 logo: data.png
 resources:
   time: "00:10:00"
