--- a/plantit.yaml
+++ b/plantit.yaml
@@ -16,8 +16,8 @@ output:
     patterns:
       - log
 logo: data.png
-resources:
+jobqueue:
   time: "00:10:00"
-  mem: "1GB"
+  memory: "1GB"
   processes: 1
   cores: 1
